# brusnika_lms_frappe

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
brusnika_lms/: hooks.py  modules.txt
brusnika_lms/brusnika_lms/doctype/brusnika_lms_settings/: brusnika_lms_settings.js  brusnika_lms_settings.json  brusnika_lms_settings.py
